docker and postgres

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,16 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+
+**/migrations/
+!**/migrations/__init__.py
+
+
+# Celery stuff
+celerybeat-schedule*
+celerybeat.pid*
+
+# Celery stuff
+**/celerybeat-schedule*
+**/celerybeat.pid*
