--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 x-shared-volumes: &shared_volumes
   - ./:/usr/src/app
-  - ./data:/usr/src/app/data
+  - ./apps:/usr/src/app/apps
 
 services:
   db:
@@ -11,7 +11,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - db:/var/lib/postgresql/data/
+      - db:/var/lib/postgresql/apps/
     ports:
       - "5433:5432"
 
